# TERRA-bot

./: Dockerfile  README.md  docker-compose.yml
ros_ws/src/odrive_terra_bot/: CMakeLists.txt  package.xml
ros_ws/src/odrive_terra_bot/config/: diffbot_controllers.yaml  joy.yaml
ros_ws/src/odrive_terra_bot/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
ros_ws/src/odrive_terra_bot/launch/: terra_bot.launch.py  terra_dev.launch.py
ros_ws/src/odrive_terra_dev/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/odrive_terra_dev/config/: tracker.yaml
ros_ws/src/odrive_terra_dev/launch/: tracker.launch.py
ros_ws/src/odrive_terra_dev/trackers/: __init__.py  base_detection.py  detect_aruco.py  detect_human.py  detect_human_with_wave.py  detect_human_yolo.py  detect_human_yolo_wave.py  drive_square.py  follow_detection.py
